--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
   icon_forest: ^1.1.8
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -43,6 +44,7 @@ flutter:
   assets:
     - images/
     - fonts/
+    - .env
   fonts:
     - family: SukhumvitSet
       fonts:
